cpp/allergies/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.008s
user	0m0.002s
sys	0m0.007s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
[ 25%] Building CXX object CMakeFiles/allergies.dir/allergies_test.cpp.o
[ 50%] Building CXX object CMakeFiles/allergies.dir/allergies.cpp.o
[ 75%] Building CXX object CMakeFiles/allergies.dir/test/tests-main.cpp.o
[100%] Linking CXX executable allergies
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
[100%] Built target allergies
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
===============================================================================
All tests passed (22 assertions in 18 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
[100%] Built target test_allergies
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/allergies.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/allergies.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)15389"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
allergies.cpp                                 18      18   100%   
allergies_test.cpp                            84      84   100%   
test/catch.hpp                                52      31    59%   1448-1450,1642-1643,1827-1833,1835-1836,2016-2017,2039-2040,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        154     133    86%
------------------------------------------------------------------------------
lines: 86.4% (133 out of 154)
branches: 39.6% (212 out of 536)

real	0m9.740s
user	0m9.072s
sys	0m0.660s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.142s
user	0m0.105s
sys	0m0.038s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.145s
user	0m0.109s
sys	0m0.037s

===============================================================================

Running: clang-format-16 -style=file -i ./allergies.cpp ./allergies_test.cpp ./allergies.h

real	0m0.020s
user	0m0.010s
sys	0m0.010s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./allergies.cpp ./allergies_test.cpp ./allergies.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/allergies.h:6:10: fatal error: 'map' file not found
#include <map>
         ^~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/allergies.h.

real	0m0.759s
user	0m0.717s
sys	0m0.041s


real	0m0.761s
user	0m0.717s
sys	0m0.043s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
18010 warnings generated.
55499 warnings generated.
55499 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/allergies.h.
Suppressed 55503 warnings (55498 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m8.276s
user	0m8.208s
sys	0m0.067s
Running: clang-tidy-16 ./allergies.cpp ./allergies_test.cpp ./allergies.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/allergies.h:6:10: error: 'map' file not found [clang-diagnostic-error]
#include <map>
         ^~~~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/allergies/allergies_test.cpp:12:5: warning: variable 'score' of type 'allergies::allergy_test' can be declared 'const' [misc-const-correctness]
    allergies::allergy_test score(0);
    ^
                            const 


real	0m8.278s
user	0m8.210s
sys	0m0.068s

===============================================================================

